--- a/app/index.html
+++ b/app/index.html
@@ -103,16 +103,16 @@
         <div class="bl_global">
             <div class="container">
                 <div class="col-xs-12">
-                    <div class="bl_global__inner">
+                    <div class="bl_global__inner clearfix">
                         <div class="bl_controls">
-                            <a class="bl_controls__enter"  href="#">Войти на сайт </a>
+                            <a class="bl_controls__enter" href="#">Войти на сайт </a>
                             <a class="bl_controls__registration" href="#">Зарегистрироваться </a>
                             <div class="bl_socLinks">
-                                <a href="#" class="bl_soc__link" data-network=""></a>
-                                <a href="#" class="bl_soc__link" data-network=""></a>
-                                <a href="#" class="bl_soc__link" data-network=""></a>
-                                <a href="#" class="bl_soc__link" data-network=""></a>
-                                <a href="#" class="bl_soc__link" data-network=""></a>
+                                <a href="#" class="bl_soc__link bl_soc__twiter" data-network=""></a>
+                                <a href="#" class="bl_soc__link bl_soc__vk" data-network=""></a>
+                                <a href="#" class="bl_soc__link bl_soc__facebook" data-network=""></a>
+                                <a href="#" class="bl_soc__link bl_soc__ssh" data-network=""></a>
+                                <a href="#" class="bl_soc__link bl_soc__google" data-network=""></a>
                             </div>
 
                             <a class="bl_bigBasket" href="#">
@@ -140,12 +140,74 @@
                             <p class="bl_information__text">Телефон горячей линии  </p>
                             <a class="bl_information__tel" href="tel: +12(034)5678910">+12(034) 567 89 10</a>
                             <p class="bl_information__data">(пн.- пт. с 9.00 до 18.00)</p>
-                            <button class="bl_information__button" type="button">вызнвать замерщика</button>
+                            <button class="bl_information__button" type="button">
+                                <span class="big">вызнвать</span>
+                                <span>замерщика</span>
+                            </button>
                         </div>
                     </div>
+
                 </div>
             </div>
 
+        </div>
+
+        <div class="container">
+            <div class="col-xs-12">
+                <div class="product_slider clearfix">
+                    <ul class="product_slider__full owl-slider">
+                        <li class="product_slider__item">
+                            <a href="#" class="product_slider__link">
+                                <img class="product_slider__img" src="image/Products/poduct_1.png" alt="door1">
+                                <p class="product_slider__name">двери</p>
+                                <p class="product_slider__material">шпонированные</p>
+                            </a>
+                        </li>
+                        <li class="product_slider__item">
+                            <a href="#" class="product_slider__link">
+                                <img class="product_slider__img" src="image/Products/poduct_2.png" alt="door2">
+                                <p class="product_slider__name">двери</p>
+                                <p class="product_slider__material">шпонированные</p>
+                            </a>
+                        </li>
+                        <li class="product_slider__item">
+                            <a href="#" class="product_slider__link">
+                                <img class="product_slider__img" src="image/Products/poduct_3.png" alt="door3">
+                                <p class="product_slider__name">двери</p>
+                                <p class="product_slider__material">шпонированные</p>
+                            </a>
+                        </li>
+                        <li class="product_slider__item">
+                            <a href="#" class="product_slider__link">
+                                <img class="product_slider__img" src="image/Products/poduct_4.png" alt="door4">
+                                <p class="product_slider__name">двери</p>
+                                <p class="product_slider__material">шпонированные</p>
+                            </a>
+                        </li>
+                        <li class="product_slider__item">
+                            <a href="#" class="product_slider__link">
+                                <img class="product_slider__img" src="image/Products/poduct_5.png" alt="door5">
+                                <p class="product_slider__name">двери</p>
+                                <p class="product_slider__material">шпонированные</p>
+                            </a>
+                        </li>
+                        <li class="product_slider__item">
+                            <a href="#" class="product_slider__link">
+                                <img class="product_slider__img" src="image/Products/poduct_3.png" alt="door6">
+                                <p class="product_slider__name">двери</p>
+                                <p class="product_slider__material">шпонированные</p>
+                            </a>
+                        </li>
+                        <li class="product_slider__item">
+                            <a href="#" class="product_slider__link">
+                                <img class="product_slider__img" src="image/Products/poduct_2.png" alt="door1">
+                                <p class="product_slider__name">двери</p>
+                                <p class="product_slider__material">шпонированные</p>
+                            </a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
         </div>
 
 
@@ -200,7 +262,6 @@
 <!-- build:js js/libs.min.js -->
 <script src="bower/bootstrap/dist/js/bootstrap.min.js"></script>
 <script src="bower/owl.carousel/dist/owl.carousel.min.js"></script>
-<script src="bower/jquery.maskedinput/dist/jquery.maskedinput.min.js"></script>
 <!-- endbuild -->
 
 <!-- build:js js/common.min.js -->
