--- a/app/index.html
+++ b/app/index.html
@@ -40,7 +40,7 @@
 <![endif]-->
 
 <!-- ---------------------------------------- HEADER -------------------------------------------------------- -->
-<header id="header" class="header">
+<header id="header" class="header clearfix">
     <div class="mainWrapper">
         <div class="container">
             <div class="col-md-6">
@@ -58,11 +58,15 @@
                 </nav>
             </div>
             <div class="col-md-6 clearfix">
+              <div class="mob_controls">
 
-                <div class="bl_search">
+
+                  <button type="button" class="js-search btn_search__mobile bl_search__button"></button>
+
+                  <div class="bl_search">
                     <div class="bl_wrappen">
                         <input class="bl_search__field " type="text" placeholder="Поиск">
-                        <button class="bl_search__button"></button>
+                        <button type="button" class="bl_search__button"></button>
                     </div>
                 </div>
 
@@ -77,7 +81,6 @@
                         <span class="bl_language__text">ua</span>
                     </label>
                 </div>
-
                 <a class="bl_basket" href="#">
                     <div class="icon_basket"></div>
                     <p class="bl_basket__text">
@@ -89,7 +92,7 @@
                         <span>5.000 грн.</span>
                     </p>
                 </a>
-
+              </div>
             </div>
         </div>
 
@@ -107,7 +110,7 @@
                         <div class="bl_controls">
                             <a class="bl_controls__enter" href="#">Войти на сайт </a>
                             <a class="bl_controls__registration" href="#">Зарегистрироваться </a>
-                            <div class="bl_socLinks">
+                            <div class="bl_socLinks hidden-xs">
                                 <a href="#" class="bl_soc__link bl_soc__twiter" data-network=""></a>
                                 <a href="#" class="bl_soc__link bl_soc__vk" data-network=""></a>
                                 <a href="#" class="bl_soc__link bl_soc__facebook" data-network=""></a>
@@ -137,9 +140,9 @@
                             </a>
                         </div>
                         <div class="bl_information">
-                            <p class="bl_information__text">Телефон горячей линии  </p>
-                            <a class="bl_information__tel" href="tel: +120345678910">+12(034) 567 89 10</a>
-                            <p class="bl_information__data">(пн.- пт. с 9.00 до 18.00)</p>
+                            <p class="bl_information__text hidden-xs">Телефон горячей линии  </p>
+                            <a class="bl_information__tel hidden-xs" href="tel: +120345678910">+12(034) 567 89 10</a>
+                            <p class="bl_information__data hidden-xs">(пн.- пт. с 9.00 до 18.00)</p>
                             <button class="bl_information__button" type="button">
                                 <span class="big">вызнвать</span>
                                 <span>замерщика</span>
@@ -201,91 +204,70 @@
                             </li>
                             <li class="product_slider__item">
                                 <a href="#" class="product_slider__link">
-                                    <img class="product_slider__img" src="image/Products/poduct_2.png" alt="door1">
+                                    <img class="product_slider__img" src="image/Products/poduct_3.png" alt="door6">
                                     <p class="product_slider__name">двери</p>
                                     <p class="product_slider__material">шпонированные</p>
                                 </a>
                             </li>
                             <li class="product_slider__item">
                                 <a href="#" class="product_slider__link">
-                                    <img class="product_slider__img" src="image/Products/poduct_2.png" alt="door1">
+                                    <img class="product_slider__img" src="image/Products/poduct_3.png" alt="door6">
                                     <p class="product_slider__name">двери</p>
                                     <p class="product_slider__material">шпонированные</p>
                                 </a>
                             </li>
                             <li class="product_slider__item">
                                 <a href="#" class="product_slider__link">
-                                    <img class="product_slider__img" src="image/Products/poduct_2.png" alt="door1">
+                                    <img class="product_slider__img" src="image/Products/poduct_3.png" alt="door6">
                                     <p class="product_slider__name">двери</p>
                                     <p class="product_slider__material">шпонированные</p>
                                 </a>
                             </li>
                             <li class="product_slider__item">
                                 <a href="#" class="product_slider__link">
-                                    <img class="product_slider__img" src="image/Products/poduct_2.png" alt="door1">
+                                    <img class="product_slider__img" src="image/Products/poduct_3.png" alt="door6">
                                     <p class="product_slider__name">двери</p>
                                     <p class="product_slider__material">шпонированные</p>
                                 </a>
                             </li>
                             <li class="product_slider__item">
                                 <a href="#" class="product_slider__link">
-                                    <img class="product_slider__img" src="image/Products/poduct_2.png" alt="door1">
+                                    <img class="product_slider__img" src="image/Products/poduct_3.png" alt="door6">
                                     <p class="product_slider__name">двери</p>
                                     <p class="product_slider__material">шпонированные</p>
                                 </a>
                             </li>
                             <li class="product_slider__item">
                                 <a href="#" class="product_slider__link">
-                                    <img class="product_slider__img" src="image/Products/poduct_2.png" alt="door1">
+                                    <img class="product_slider__img" src="image/Products/poduct_3.png" alt="door6">
                                     <p class="product_slider__name">двери</p>
                                     <p class="product_slider__material">шпонированные</p>
                                 </a>
                             </li>
                             <li class="product_slider__item">
                                 <a href="#" class="product_slider__link">
-                                    <img class="product_slider__img" src="image/Products/poduct_2.png" alt="door1">
+                                    <img class="product_slider__img" src="image/Products/poduct_3.png" alt="door6">
                                     <p class="product_slider__name">двери</p>
                                     <p class="product_slider__material">шпонированные</p>
                                 </a>
                             </li>
                             <li class="product_slider__item">
                                 <a href="#" class="product_slider__link">
-                                    <img class="product_slider__img" src="image/Products/poduct_2.png" alt="door1">
+                                    <img class="product_slider__img" src="image/Products/poduct_3.png" alt="door6">
                                     <p class="product_slider__name">двери</p>
                                     <p class="product_slider__material">шпонированные</p>
                                 </a>
                             </li>
                             <li class="product_slider__item">
                                 <a href="#" class="product_slider__link">
-                                    <img class="product_slider__img" src="image/Products/poduct_2.png" alt="door1">
+                                    <img class="product_slider__img" src="image/Products/poduct_3.png" alt="door6">
                                     <p class="product_slider__name">двери</p>
                                     <p class="product_slider__material">шпонированные</p>
                                 </a>
                             </li>
                             <li class="product_slider__item">
                                 <a href="#" class="product_slider__link">
-                                    <img class="product_slider__img" src="image/Products/poduct_2.png" alt="door1">
-                                    <p class="product_slider__name">двери</p>
-                                    <p class="product_slider__material">шпонированные</p>
-                                </a>
-                            </li>
-                            <li class="product_slider__item">
-                                <a href="#" class="product_slider__link">
-                                    <img class="product_slider__img" src="image/Products/poduct_2.png" alt="door1">
-                                    <p class="product_slider__name">двери</p>
-                                    <p class="product_slider__material">шпонированные</p>
-                                </a>
-                            </li>
-                            <li class="product_slider__item">
-                                <a href="#" class="product_slider__link">
-                                    <img class="product_slider__img" src="image/Products/poduct_2.png" alt="door1">
-                                    <p class="product_slider__name">двери</p>
-                                    <p class="product_slider__material">шпонированные</p>
-                                </a>
-                            </li>
-                            <li class="product_slider__item">
-                                <a href="#" class="product_slider__link">
-                                    <img class="product_slider__img" src="image/Products/poduct_2.png" alt="door1">
+                                    <img class="product_slider__img" src="image/Products/poduct_3.png" alt="door6">
                                     <p class="product_slider__name">двери</p>
                                     <p class="product_slider__material">шпонированные</p>
                                 </a>
@@ -329,41 +311,46 @@
                     </div>
                     <div class="col-md-8">
                         <div class="bl_ceo">
-                            <p>Повседневная практика показывает, что постоянный количественный рост и сфера нашей
-                                активности позволяет оценить значение существенных финансовых и административных
-                                условий. Значимость этих проблем настолько очевидна, что консультация с широким активом
-                                представляет собой интересный эксперимент проверки направлений прогрессивного
-                                развития.</p>
+                            <div class="bl_ceo__wrapper">
+                                <p>Повседневная практика показывает, что постоянный количественный рост и сфера нашей
+                                    активности позволяет оценить значение существенных финансовых и административных
+                                    условий. Значимость этих проблем настолько очевидна, что консультация с широким активом
+                                    представляет собой интересный эксперимент проверки направлений прогрессивного
+                                    развития.</p>
 
-                            <p>Идейные соображения высшего порядка, а также сложившаяся структура организации влечет за
-                                собой процесс внедрения и модернизации системы обучения кадров, соответствует насущным
-                                потребностям. </p>
+                                <p>Идейные соображения высшего порядка, а также сложившаяся структура организации влечет за
+                                    собой процесс внедрения и модернизации системы обучения кадров, соответствует насущным
+                                    потребностям. </p>
 
-                            <p>Таким образом сложившаяся структура организации требуют определения и уточнения
-                                направлений прогрессивного развития. С другой стороны сложившаяся структура организации
-                                способствует подготовки и реализации системы обучения кадров, соответствует насущным
-                                потребностям. Значимость этих проблем настолько очевидна, что укрепление и развитие
-                                структуры влечет за собой процесс внедрения и модернизации соответствующий условий
-                                активизации. </p>
+                                <p>Таким образом сложившаяся структура организации требуют определения и уточнения
+                                    направлений прогрессивного развития. С другой стороны сложившаяся структура организации
+                                    способствует подготовки и реализации системы обучения кадров, соответствует насущным
+                                    потребностям. Значимость этих проблем настолько очевидна, что укрепление и развитие
+                                    структуры влечет за собой процесс внедрения и модернизации соответствующий условий
+                                    активизации. </p>
 
-                            <p>С другой стороны начало повседневной работы по формированию позиции позволяет оценить
-                                значение дальнейших направлений развития. Идейные соображения высшего порядка, а также
-                                реализация намеченных плановых заданий влечет за собой процесс внедрения и модернизации
-                                позиций, занимаемых участниками в отношении поставленных задач. С другой стороны начало
-                                повседневной работы по формированию позиции представляет собой интересный эксперимент
-                                проверки новых предложений. Равным образом рамки и место обучения кадров в значительной
-                                степени обуславливает создание системы обучения кадров, соответствует насущным
-                                потребностям.</p>
+                                <p>С другой стороны начало повседневной работы по формированию позиции позволяет оценить
+                                    значение дальнейших направлений развития. Идейные соображения высшего порядка, а также
+                                    реализация намеченных плановых заданий влечет за собой процесс внедрения и модернизации
+                                    позиций, занимаемых участниками в отношении поставленных задач. С другой стороны начало
+                                    повседневной работы по формированию позиции представляет собой интересный эксперимент
+                                    проверки новых предложений. Равным образом рамки и место обучения кадров в значительной
+                                    степени обуславливает создание системы обучения кадров, соответствует насущным
+                                    потребностям.</p>
 
-                            <p>Повседневная практика показывает, что дальнейшее развитие различных форм деятельности в
-                                значительной степени обуславливает создание системы обучения кадров, соответствует
-                                насущным потребностям. Не следует, однако забывать, что рамки и место обучения кадров
-                                обеспечивает широкому кругу (специалистов) участие в формировании модели развития.</p>
+                                <p>Повседневная практика показывает, что дальнейшее развитие различных форм деятельности в
+                                    значительной степени обуславливает создание системы обучения кадров, соответствует
+                                    насущным потребностям. Не следует, однако забывать, что рамки и место обучения кадров
+                                    обеспечивает широкому кругу (специалистов) участие в формировании модели развития.</p>
 
-                            <p>Товарищи! начало повседневной работы по формированию позиции позволяет выполнять важные
-                                задания по разработке систем массовогоу частия.</p>
-
+                                <p>Товарищи! начало повседневной работы по формированию позиции позволяет выполнять важные
+                                    задания по разработке систем массовогоу частия.</p>
+                            </div>
+                            <button type="button" class="bl_ceo__showMore">Читать всё ...</button>
                         </div>
+
+
+
                     </div>
                     <div class="col-md-2">
                         <div class="banner_zone">
@@ -414,13 +401,12 @@
         <div class="footer_line">
             <div class="container">
                 <div class="col-xs-12">
-
                     <div class="footer_copiraite">
                         <span class="footer_copiraite__text">Nakitel ©2014</span>
                     </div>
 
 
-                    <nav class="footer_navigation">
+                    <nav class="footer_navigation hidden-xs">
                         <ul class="footer_navigation__full">
                             <li class="footer_navigation__item"><a href="#" class="footer_navigation__link">Контакты</a>
                             </li>
@@ -441,44 +427,10 @@
     </div>
 </footer>
 
-<div class="blackWrapper hidden"></div>
-
-
-<!-- ANCOR -->
-
-<div class="bl_ancor hidden-xs hidden">
-    <div class="bl_wrappen">
-        <a class="bl_ancor__link bl_ancor__icon" href="#header">Вверх</a>
-    </div>
+<div class="for_bombed">
+    <img src="https://github.com/BlackStar1991/Pictures-for-sharing-/blob/master/smiles/relax.jpg?raw=true" alt="relax">
+    <a  href="mailto:zirkaandry@ukr.net"> Write to me, I will give you a microscope</a>
 </div>
-
-<!-- POPUP BIFORE ADD TO SHOPBAG-->
-
-<div class="popup_likeShopbag hidden">
-    <div class="wrapperBlock">
-        <button class="popup_likeShopbag__close">
-            <i class="fa fa-times decor_icon__close" aria-hidden="true"></i>
-        </button>
-        <p class="popup_likeShopbag__text popup_likeShopbag__text_main">Подтверждение</p>
-
-        <div class="popup_likeShopbag__product">
-            <p class="shoppingBasket_product__name">Электро-сеть ываыв ыв аываы аыв аываываыва ываываыва ываываываываыва
-                ываыва</p>
-        </div>
-        <p class="popup_likeShopbag__text  popup_likeShopbag__text_main">добавлен в корзину</p>
-
-        <div class="popup_likeShopbag__buttons">
-            <button class="button_buyProduct popup_likeShopbag__continueBuying">
-                <span class="button_buyProduct__text popup_likeShopbag__buttons_text">Продолжить покупки</span>
-            </button>
-            <div class="button_buyProduct popup_likeShopbag__goToShopbag">
-                <a href="#" class="button_buyProduct__text popup_likeShopbag__goToShopbag_text">Оформление заказа</a>
-            </div>
-        </div>
-
-    </div>
-</div>
-
 
 <script src="libs/jquery.min.js"></script>
 
